Issue #2: Fixed full screen layout: it's scrollable with alignment by center.

--- a/src/ui/layouts/FullScreenPageLayout/FullScreenPageLayout.module.scss
+++ b/src/ui/layouts/FullScreenPageLayout/FullScreenPageLayout.module.scss
@@ -5,9 +5,20 @@
 
 .header,
 .footer {
-  /*!KEEP*/
+  width: 100%;
 }
 
 .content {
   @include fullSizeBlock;
+  width: 100%;
+}
+
+.scrollableContent {
+  width: 100%;
+}
+
+.scrollableContainer {
+  width: 100%;
+  margin: auto;
+  display: flex;
 }
